--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -11,32 +11,61 @@
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="@dimen/card_height"
-        android:layout_margin="@dimen/card_margin"
+        android:layout_margin="@dimen/card_distance_small"
         card_view:cardCornerRadius="@dimen/card_corner_radius">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/feedTitle"
-                android:textSize="@dimen/card_primary_text"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:paddingTop="@dimen/card_distance_small"
+                android:paddingBottom="@dimen/card_distance_small"
+                android:paddingStart="@dimen/card_distance_mid"
+                android:paddingEnd="@dimen/card_distance_mid"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                />
+                android:layout_weight=".70">
 
-            <TextView
-                android:id="@+id/feedTag"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/feedTitle"
+                    android:textSize="@dimen/card_primary_text_size"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/card_test_title_text"
+                    />
 
-        </RelativeLayout>
+                <TextView
+                    android:id="@+id/feedTag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:textSize="@dimen/card_tag_text_size"
+                    android:text="@string/card_test_tag_text"/>
 
-        <com.witkey.coder.zhdaily.customviews.FadeInImageView
-            android:id="@+id/feedThumbnail"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerVertical="true"/>
+            </RelativeLayout>
+
+            <com.witkey.coder.zhdaily.customviews.FadeInImageView
+                android:id="@+id/feedThumbnail"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight=".30"
+                android:layout_margin="@dimen/card_distance_small"
+                android:src="@mipmap/ic_launcher"
+                android:background="@color/blue50"/>
+
+        </LinearLayout>
+
+        <!--<RelativeLayout-->
+            <!--android:layout_width="@dimen/card_image_size"-->
+            <!--android:layout_height="@dimen/card_image_size"-->
+            <!--android:layout_marginRight="@dimen/card_margin"-->
+            <!--android:layout_marginEnd="@dimen/card_margin"-->
+            <!--android:layout_gravity="end|center_vertical">-->
+
+
+
+        <!--</RelativeLayout>-->
 
     </android.support.v7.widget.CardView>
 
