--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,9 +8,12 @@
     <dimen name="fab_margin">16dp</dimen>
 
     <!--Card view-->
-    <dimen name="card_primary_text">24sp</dimen>
+    <dimen name="card_primary_text_size">18sp</dimen>
     <dimen name="card_height">120dp</dimen>
-    <dimen name="card_margin">8dp</dimen>
+    <dimen name="card_distance_small">8dp</dimen>
+    <dimen name="card_distance_mid">12dp</dimen>
     <dimen name="card_corner_radius">4dp</dimen>
-    <dimen name="recycler_overlap_top">64dp</dimen>
+    <dimen name="card_image_size">96dp</dimen>
+    <dimen name="card_title_length">80dp</dimen>
+    <dimen name="card_tag_text_size">10dp</dimen>
 </resources>
