--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,11 +9,15 @@
 
     <!--Card view-->
     <dimen name="card_primary_text_size">18sp</dimen>
+    <dimen name="card_tag_text_size">10sp</dimen>
     <dimen name="card_height">120dp</dimen>
     <dimen name="card_distance_small">8dp</dimen>
     <dimen name="card_distance_mid">12dp</dimen>
     <dimen name="card_corner_radius">4dp</dimen>
     <dimen name="card_image_size">96dp</dimen>
     <dimen name="card_title_length">80dp</dimen>
-    <dimen name="card_tag_text_size">10dp</dimen>
+
+    <!--Date text view-->
+    <dimen name="date_text_margin">12dp</dimen>
+
 </resources>
