Update: add flipper layout

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,5 +19,6 @@
 
     <!--Date text view-->
     <dimen name="date_text_margin">12dp</dimen>
+    <dimen name="card_flipper_height">180dp</dimen>
 
 </resources>
