--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,5 +20,6 @@
     <!--Date text view-->
     <dimen name="date_text_margin">12dp</dimen>
     <dimen name="card_flipper_height">180dp</dimen>
+    <dimen name="article_toolbar_distance_mid">14dp</dimen>
 
 </resources>
