--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/activity_main_drawer" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:headerLayout="@layout/nav_header_main"/>
 
 </android.support.v4.widget.DrawerLayout>
