--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -2,35 +2,33 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/nav_header_height"
     android:background="@drawable/side_nav_bar"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     android:orientation="vertical"
     android:gravity="bottom">
 
     <com.witkey.coder.zhdaily.customviews.CircularImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/nav_circle_image_size"
+        android:layout_height="@dimen/nav_circle_image_size"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:src="@mipmap/ic_launcher"
-        android:background="@color/blue50"
-        android:id="@+id/avatarImage" />
+        android:id="@+id/avatar_image" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:layout_toEndOf="@+id/avatarImage"
-        android:layout_toRightOf="@+id/avatarImage"
-        android:text="Android Studio"
+        android:layout_toEndOf="@id/avatar_image"
+        android:layout_toRightOf="@id/avatar_image"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <LinearLayout
-        android:layout_below="@+id/avatarImage"
+        android:layout_below="@id/avatar_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -39,7 +37,7 @@
             android:layout_weight="1"
             android:drawableStart="@drawable/ic_grade_white_18dp"
             android:drawableLeft="@drawable/ic_grade_white_18dp"
-            android:text="我的收藏"
+            android:text="@string/nav_header_main_collection"
             android:textColor="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -48,9 +46,9 @@
         <TextView
             android:id="@+id/watch"
             android:layout_weight="1"
-            android:drawableLeft="@drawable/ic_grade_white_18dp"
-            android:drawableStart="@drawable/ic_grade_white_18dp"
-            android:text="我的关注"
+            android:drawableLeft="@drawable/ic_favorite_white_18dp"
+            android:drawableStart="@drawable/ic_favorite_white_18dp"
+            android:text="@string/nav_header_main_star"
             android:textColor="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
