--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,4 +6,10 @@
         android:title="@string/action_settings"
         android:orderInCategory="100"
         app:showAsAction="never" />
+
+    <item android:id="@+id/action_message"
+          android:title="@string/action_message"
+          android:icon="@drawable/ic"
+          android:orderInCategory="100"
+          app:showAsAction="ifRoom" />
 </menu>
