--- a/app/src/main/res/layout/date_text_main.xml
+++ b/app/src/main/res/layout/date_text_main.xml
@@ -5,7 +5,7 @@
 
     <TextView
         android:id="@+id/dateText"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/date_text_margin"/>
 
