--- a/app/src/main/res/layout/flipper_child_main.xml
+++ b/app/src/main/res/layout/flipper_child_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
@@ -13,7 +13,10 @@
 
     <TextView
         android:id="@+id/flipper_text"
-        android:layout_width="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:textSize="@dimen/flipper_child_text_size"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-</FrameLayout>
+</RelativeLayout>
