--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -9,7 +9,7 @@
 
     <item android:id="@+id/action_message"
           android:title="@string/action_message"
-          android:icon="@drawable/ic"
+          android:icon="@drawable/ic_notifications_white_24dp"
           android:orderInCategory="100"
           app:showAsAction="ifRoom" />
 </menu>
