--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,5 +26,6 @@
     <dimen name="article_text_size_big">24sp</dimen>
     <dimen name="article_text_size_small">8sp</dimen>
     <dimen name="nav_circle_image_size">70dp</dimen>
+    <dimen name="flipper_child_text_size">48sp</dimen>
 
 </resources>
