--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,10 @@
     <color name="colorAccent">#1E88E5</color>
     <color name="blue50">#E3F2FD</color>
     <color name="white">#FFFFFF</color>
+
+    <!--Google Color-->
+    <color name="red">#FFC93437</color>
+    <color name="blue">#FF375BF1</color>
+    <color name="yellow">#FFF7D23E</color>
+    <color name="green">#FF34A350</color>
 </resources>
