--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,15 +5,8 @@
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 android:layout_height="match_parent">
 
-    <in.srain.cube.views.ptr.PtrFrameLayout
+    <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/ptr_frame"
-        xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
-        cube_ptr:ptr_duration_to_close="300"
-        cube_ptr:ptr_duration_to_close_header="2000"
-        cube_ptr:ptr_keep_header_when_refresh="true"
-        cube_ptr:ptr_pull_to_fresh="false"
-        cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
-        cube_ptr:ptr_resistance="1.7"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -23,6 +16,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
-    </in.srain.cube.views.ptr.PtrFrameLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
